Nested Templates/Creation of Two Vnets and peering/Subtemplates/NSGcreation.json
{
	"$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"location":
		{
			"type": "string"
		},
		"networkSecurityGroup1": {
			"type": "string"
		},
		"networkSecurityGroup2": {
			"type": "string"
		},
		"networkSecurityGroup3": {
			"type": "string"
		},
		"subnetAddressPrefix1": {
			"type": "string"
		},
		"subnetAddressPrefix2": {
			"type": "string"
		},
		"subnetAddressPrefix3": {
			"type": "string"
		}
    },
    
    "resources": [

		{
			"apiVersion": "2017-06-01",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[parameters('networkSecurityGroup1')]",
			"location": "[parameters('location')]",
			"properties": {
				"securityRules": [{
						"name": "HTTPorHTTPS",
						"properties": {
							"description": "HTTP/S rule",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRanges": ["80","443"],
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix":"[parameters('subnetAddressPrefix1')]",
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},

					{
						"name": "DenyCommToDatabase",
						"properties": {
							"description": "To Deny Communication to Database Subnet",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "*",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix":"[parameters('subnetAddressPrefix3')]",							"access": "Deny",
							"priority": 100,
							"direction": "Outbound"
						}
					},
					{
						"name": "WEBtoAPI",
						"properties": {
							"description": "Communication between WEB and API subnet",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRanges": ["81","445"],
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix1')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"access": "Allow",
							"priority": 110,
							"direction": "Outbound"
						}
					}

				]
			}
		},

		{
			"apiVersion": "2017-06-01",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[parameters('networkSecurityGroup2')]",
			"location": "[parameters('location')]",
			"properties": {
				"securityRules": [{
						"name": "HTTPfromWEB",
						"properties": {
							"description": "To accept HTTP connection from WEB subnet",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRanges":[ "80","443"],
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix1')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "DATABASEtoAPI",
						"properties": {
							"description": "Inbound connnection from DATABASE subnet to API subnet.",
							"protocol": "Tcp",
							"sourcePortRanges": ["80","443"],
							"destinationPortRanges": ["81","445"],
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"access": "Allow",
							"priority": 110,
							"direction": "Inbound"
						}
					},
					{
						"name": "FTPin",
						"properties": {
							"description": "FTP connection from DATABASE subnet.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "21",
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"access": "Allow",
							"priority": 120,
							"direction": "Inbound"
						}
					},
					{
						"name": "APItoDATABASE",
						"properties": {
							"description": "MySQL connection to DATABASE subnet from API subnet",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "3306",
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"access": "Allow",
							"priority": 100,
							"direction": "Outbound"
						}
					},
					{
						"name": "APItoWEB",
						"properties": {
							"description": "HTTP/S connection from API to WEB subnet.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRanges": ["82","446"],
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix1')]",
							"access": "Allow",
							"priority": 110,
							"direction": "Outbound"
						}
					},
					{
						"name": "FTP",
						"properties": {
							"description": "FTP connection from API subnet to DATABASE subnet.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRanges": ["21"],
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"access": "Allow",
							"priority": 120,
							"direction": "Outbound"
						}
					}


				]
			}
		},


		{
			"apiVersion": "2017-06-01",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[parameters('networkSecurityGroup3')]",
			"location": "[parameters('location')]",
			"properties": {
				"securityRules": [{
						"name": "InboundFromAPI",
						"properties": {
							"description": "To accept connection from API subnet",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "3306",
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "InboundFromWEB",
						"properties": {
							"description": "Deny direct Communication between DATABASE and WEB subnets.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "*",
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix1')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"access": "Deny",
							"priority": 110,
							"direction": "Inbound"
						}
					},
					{
						"name": "SSH",
						"properties": {
							"description": "SSH connection from DATABASE subnet IPs.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "22",
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"access": "Allow",
							"priority": 120,
							"direction": "Inbound"
						}
					},
					{
						"name": "FTP",
						"properties": {
							"description": "FTP connection to DATABASE subnet from API subnet",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "21",
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"access": "Allow",
							"priority": 130,
							"direction": "Inbound"
						}
					},
					{
						"name": "DATABASEToAPI",
						"properties": {
							"description": " Connection from DATABASE to API subnet.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRanges": ["81","445"],
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"access": "Allow",
							"priority": 100,
							"direction": "Outbound"
						}
					},
					{
						"name": "FTPout",
						"properties": {
							"description": "FTP connection from DATABASE to API subnet.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "21",
							"sourceAddressPrefix": "[parameters('subnetAddressPrefix3')]",
							"destinationAddressPrefix": "[parameters('subnetAddressPrefix2')]",
							"access": "Allow",
							"priority": 110,
							"direction": "Outbound"
						}
					}


				]
			}
        }
    ]



}
